--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.0",
     "ejs": "^3.1.8",
     "firebase-admin": "^11.5.0",
+    "midtrans-client": "^1.3.1",
     "moment-timezone": "^0.5.40",
     "nestjs-minio-client": "^2.0.0",
     "nodemailer": "^6.9.1",
