--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rxjs": "^7.2.0",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
+    "socket.io": "^4.6.1",
     "typeorm": "^0.3.12",
     "uuid": "^9.0.0"
   },
