--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.0",
     "ejs": "^3.1.8",
     "firebase-admin": "^11.5.0",
+    "lodash": "^4.17.21",
     "midtrans-client": "^1.3.1",
     "moment-timezone": "^0.5.40",
     "nestjs-minio-client": "^2.0.0",
