--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "firebase-admin": "^11.5.0",
+    "google-auth-library": "^8.7.0",
     "lodash": "^4.17.21",
     "midtrans-client": "^1.3.1",
     "moment-timezone": "^0.5.40",
