--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.2.1",
@@ -40,6 +41,7 @@
     "bull": "^4.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "firebase-admin": "^11.5.0",
@@ -69,6 +71,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
+    "@types/cron": "^2.0.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
