--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^3.5.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/bullmq": "^1.1.0",
     "@nestjs/common": "^9.0.0",
@@ -37,6 +38,8 @@
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.2.1",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.3",
     "class-transformer": "^0.5.1",
@@ -46,6 +49,7 @@
     "ejs": "^3.1.8",
     "firebase-admin": "^11.5.0",
     "google-auth-library": "^8.7.0",
+    "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "midtrans-client": "^1.3.1",
     "moment-timezone": "^0.5.40",
@@ -58,7 +62,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.0",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
     "socket.io": "^4.6.1",
@@ -74,6 +78,7 @@
     "@types/cron": "^2.0.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
+    "@types/geojson": "^7946.0.10",
     "@types/jest": "28.1.8",
     "@types/minio": "^7.0.15",
     "@types/multer": "^1.4.7",
