--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.2.1",
     "@types/axios": "^0.14.0",
+    "@types/ws": "^8.5.5",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -64,7 +65,8 @@
     "slugify": "^1.6.5",
     "socket.io": "^4.6.1",
     "typeorm": "^0.3.12",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "y-websocket": "^1.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
