--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.21",
     "midtrans-client": "^1.3.1",
     "moment-timezone": "^0.5.40",
+    "music-metadata-browser": "^2.5.10",
     "nestjs-minio-client": "^2.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
