--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nestjs-minio-client": "^2.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
