--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/platform-ws": "^10.2.1",
     "@nestjs/schedule": "^2.2.1",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
@@ -55,6 +56,7 @@
     "music-metadata-browser": "^2.5.10",
     "nestjs-minio-client": "^2.0.0",
     "nodemailer": "^6.9.1",
+    "openai": "^4.2.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -69,7 +71,9 @@
     "socket.io": "^4.6.1",
     "typeorm": "^0.3.12",
     "uuid": "^9.0.0",
-    "y-websocket": "^1.5.0"
+    "y-protocols": "^1.0.5",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
